--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -75,8 +75,7 @@
         <div class="container mx-auto mt-20">
           <div class="inline-grid px-14 gap-6">
             <a href="" class="text-7xl text-gray-400 transition hover:text-white">Homepage</a>
-            <a href="" class="text-7xl text-gray-400 transition hover:text-white">Services</a>
-            <a href="" class="text-7xl text-gray-400 transition hover:text-white">Portfolio</a>
+            <a href="../pages/portfolio.html" class="text-7xl text-gray-400 transition hover:text-white">Portfolio</a>
             <a href="" class="text-7xl text-gray-400 transition hover:text-white">Contact</a>
       
           
