--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <link href="/dist/output.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../input.css" />
+    <link rel="stylesheet" href="./input.css" />
   </head>
 
  <style>
