--- a/src/contact.html
+++ b/src/contact.html
@@ -164,7 +164,7 @@
         <div class="grid">
             <div >
             <h1 class="text-4xl font-bold">Contact form</h1>
-            <p class="mt-8 text-gray-500 lg:mt-6 xl:mt-6 text-md md:w-full lg:w-full xl:w-full w-96">I value your thoughts and questions. Please use the form on this page to reach out to me. I'll reply quickly and look forward to connecting with you.</p>
+            <p class="mt-8 text-gray-500 lg:mt-6 xl:mt-6 text-md md:w-full lg:w-full xl:w-full w-80">I value your thoughts and questions. Please use the form on this page to reach out to me. I'll reply quickly and look forward to connecting with you.</p>
         </div>
         </div>
 
@@ -174,7 +174,7 @@
                     <h1 class="font-semibold flex gap-2">Full Name <p class="text-red-700">*</p></h1>
                     <input
                         type="text"
-                        class="mt-4 transition border-b-2 py-3 border-black md:w-64 lg:w-64 xl:w-64 w-full lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63]"
+                        class="mt-4 transition border-b-2 py-3 border-black  lg:w-64 xl:w-64 w-36 lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63]"
                         placeholder="Your name"
                     >
                 </div>
@@ -184,7 +184,7 @@
                     <h1 class="font-semibold flex gap-2">Email Address <p class="text-red-700">*</p></h1>
                     <input
                         type="text"
-                        class="mt-4 transition border-b-2 py-3 border-black md:w-64 lg:w-64 xl:w-64 w-full lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63]"
+                        class="mt-4 transition border-b-2 py-3 border-black  lg:w-64 xl:w-64 w-36 lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63]"
                         placeholder="Your e-mail"
                     >
                 </div>
@@ -196,7 +196,7 @@
                 <div class="flex flex-col">
                     <textarea
                         rows="6"
-                        class="mt-4 transition border-b-2 border-black w-full lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63] resize-none"
+                        class="mt-4 transition border-b-2 border-black md:w-full lg:w-full xl:w-full w-full lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63] resize-none"
                         placeholder="Your Message"
                     ></textarea>
                 </div>
