--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,9 @@
       id="popupContainer"
       class="fixed top-0 left-0 w-full h-full bg-[#131212] flex hidden mx-auto z-50 "
     >
+    <div class="absolute top-0 left-0 w-full bg-gray-300 z-20">
+      <div class="h-1 bg-[#8d6e63]" id="progress-bar"></div>
+    </div>
       <div class="flex mt-8 justify-between w-full mx-auto ">
         <div class="justify-between font-semibold flex w-full fixed mx-auto h-24 py-8 top-0 lg:px-7 xl:px-7 px-4">
           <div>
