--- a/src/contact.html
+++ b/src/contact.html
@@ -67,7 +67,7 @@
     <!-- The pop-up container -->
     <div
       id="popupContainer"
-      class="fixed top-0 left-0 w-full h-full bg-[#131212] flex hidden mx-auto z-50 "
+      class="fixed top-0 left-0 w-full h-full bg-[#131212] flex hidden mx-auto z-50 transition"
     >
     <div class="absolute top-0 left-0 w-full bg-gray-300 z-20">
       <div class="h-1 bg-[#8d6e63]" id="progress-bar"></div>
