--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
  </style>
   <body class="font-sans scrollbar-thumb-gray-400 scrollbar-thin" id="Home">
     <div class="Loading_screen bg-black flex justify-center mx-auto items-center z-50 fixed top-0 left-0 w-full h-full">
-      <h1 class="text-white text-7xl animate__animated animate__backInUp">Loading...</h1>
+      <h1 class="text-white text-8xl animate__animated animate__backInUp tracking-tighter">Loading...</h1>
       <div class="absolute top-0 left-0 w-full bg-gray-300">
         <div class="h-1 transition bg-[#8d6e63]" id="progress-bars"></div>
       </div>
