--- a/src/contact.html
+++ b/src/contact.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./img/favicon.png" type="image/png">
+    <link rel="icon" href="./img/favicon.png" class="rounded-full" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ryll.dev</title>
     <script
