--- a/src/index.html
+++ b/src/index.html
@@ -111,9 +111,9 @@
           <div class="md:flex lg:flex xl:flex grid gap-4  md:text-md lg:text-md xl:text-md ">
             <h1 class="text-gray-500">Follow me on</h1>
             <div class="md:flex lg:flex xl:flex grid font-semibold gap-2 text-white">
-              <a href="" class="hover:text-[#8d6e63] transition">Facebook</a>
-              <a href="" class="hover:text-[#8d6e63] transition">Instagram</a>
-              <a href="" class="hover:text-[#8d6e63] transition">Linkedin</a>
+              <a href="https://www.facebook.com/reymark.boquiron" target="_blank" class="hover:text-[#8d6e63] transition">Facebook</a>
+              <a href="https://www.instagram.com/rylllls/" target="_blank" class="hover:text-[#8d6e63] transition">Instagram</a>
+              <a href="https://www.linkedin.com/in/reymark-boquiron-b6b19b175/" target="_blank" class="hover:text-[#8d6e63] transition">Linkedin</a>
             </div>
           </div>
 
