--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -63,14 +63,13 @@
   </div>
     <div class="flex mt-8 justify-between w-full mx-auto ">
       <div class="justify-between font-semibold flex w-full fixed mx-auto h-24 py-8 top-0 lg:px-7 xl:px-7 px-4">
-        <div>
+        <a href="https://rylllll.github.io/Portfolio/src/">
           <h1
-            id="text2" class="text-md tracking-widest cursor-pointer text-white transition font-bold hover:text-[#8d6e63]"
+            class="text-md tracking-widest cursor-pointer transition font-bold hover:text-[#8d6e63]"
           >
             REY.DEV
           </h1>
-        </div>
-
+        </a>
         <div class="flex gap-6">
           <div class="cursor-pointer hover:text-[#8d6e63]">
             <button class="" onclick="closePopup()">
@@ -97,9 +96,9 @@
         <div class="md:flex lg:flex xl:flex grid gap-4  md:text-md lg:text-md xl:text-md ">
           <h1 class="text-gray-500">Follow me on</h1>
           <div class="md:flex lg:flex xl:flex grid font-semibold gap-2 text-white">
-            <a href="" class="hover:text-[#8d6e63] transition">Facebook</a>
-            <a href="" class="hover:text-[#8d6e63] transition">Instagram</a>
-            <a href="" class="hover:text-[#8d6e63] transition">Linkedin</a>
+            <a href="https://www.facebook.com/reymark.boquiron" target="_blank" class="hover:text-[#8d6e63] transition">Facebook</a>
+            <a href="https://www.instagram.com/rylllls/" target="_blank" class="hover:text-[#8d6e63] transition">Instagram</a>
+            <a href="https://www.linkedin.com/in/reymark-boquiron-b6b19b175/" target="_blank" class="hover:text-[#8d6e63] transition">Linkedin</a>
           </div>
         </div>
 
@@ -237,9 +236,9 @@
     <div class="md:flex lg:flex xl:flex grid gap-4 mt-36 md:text-md lg:text-md xl:text-md">
       <h1 class="text-gray-500">Follow me on</h1>
       <div class="md:flex lg:flex xl:flex grid font-semibold gap-2">
-        <a href="" class="hover:text-[#8d6e63] transition ">Facebook</a>
-        <a href="" class="hover:text-[#8d6e63] transition">Instagram</a>
-        <a href="" class="hover:text-[#8d6e63] transition">Linkedin</a>
+        <a href="https://www.facebook.com/reymark.boquiron" target="_blank" class="hover:text-[#8d6e63] transition">Facebook</a>
+        <a href="https://www.instagram.com/rylllls/" target="_blank" class="hover:text-[#8d6e63] transition">Instagram</a>
+        <a href="https://www.linkedin.com/in/reymark-boquiron-b6b19b175/" target="_blank" class="hover:text-[#8d6e63] transition">Linkedin</a>
       </div>
       
     </div>
