--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -87,7 +87,7 @@
         <div class="inline-grid lg:px-14 xl:px-14 px-4 gap-6">
           <a href="https://rylllll.github.io/Portfolio/src/" class=" animate__animated animate__fadeInUp md:text-7xl lg:text-7xl xl:text-7xl text-5xl text-gray-400 transition hover:text-white">Homepage</a>
           <a href="https://rylllll.github.io/Portfolio/src/portfolio.html" class=" animate__animated animate__fadeInUp md:text-7xl lg:text-7xl xl:text-7xl text-5xl transitiion text-white">Portfolio</a>
-          <a href="../pages/portfolio.html" class=" animate__animated animate__fadeInUp md:text-7xl lg:text-7xl xl:text-7xl text-5xl text-gray-400 transition hover:text-white">Resume</a>
+          <a href="https://rylllll.github.io/Portfolio/src/resume.html" class=" animate__animated animate__fadeInUp md:text-7xl lg:text-7xl xl:text-7xl text-5xl text-gray-400 transition hover:text-white">Resume</a>
           <a href="https://rylllll.github.io/Portfolio/src/contact.html" class=" animate__animated animate__fadeInUp md:text-7xl lg:text-7xl xl:text-7xl text-5xl text-gray-400 transition hover:text-white">Contact</a>
           
         
