--- a/src/contact.html
+++ b/src/contact.html
@@ -69,13 +69,13 @@
     </div>
       <div class="flex mt-8 justify-between w-full mx-auto ">
         <div class="justify-between font-semibold flex w-full fixed mx-auto h-24 py-8 top-0 lg:px-7 xl:px-7 px-4">
-          <a href="https://rylllll.github.io/Portfolio/src/">
+          <div>
             <h1
-              class="text-md tracking-widest cursor-pointer transition font-bold hover:text-[#8d6e63]"
+              id="text2" class="text-md tracking-widest cursor-pointer text-white transition font-bold hover:text-[#8d6e63]"
             >
               REY.DEV
             </h1>
-          </a>
+          </div>
 
           <div class="flex gap-6">
             <div class="cursor-pointer hover:text-[#8d6e63]">
