--- a/src/resume.html
+++ b/src/resume.html
@@ -186,7 +186,7 @@
                 <h1 class="text-sm font-semibold ">BACHELORS DEGREE</h1>
             </div>
             <div class="w-full h-0.5 bg-black mt-2 scrollrevs"></div>
-            <button class="scrollrevs bg-black mt-8 w-full py-3 text-white hover:bg-[#8d6e63] transition">Send message</button>
+            <a href="https://rylllll.github.io/Portfolio/src/contact.html"><button class="scrollrevs bg-black mt-8 w-full py-3 text-white hover:bg-[#8d6e63] transition">Send message</button></a>
         </div>
         </div>
 
@@ -198,7 +198,7 @@
                 <div class="w-full h-1.5 bg-black mt-2 "></div>
 
                 <div class="md:flex lg:flex xl:flex grid gap-2 mt-4 justify-between text-md w-full scrollrevs">
-                    <h1><b>Rizal Technological University</b> - Pasig Campus, Pasig City <br class="text-sm">Bachelor of Science in Computer Engineering.<br>
+                    <h1><b>Rizal Technological University</b> - Pasig Campus <br class="text-sm">Bachelor of Science in Computer Engineering.<br>
                     </h1>
                     <h1 class="font-bold">2019 - 2023</h1>
 
