--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -178,16 +178,16 @@
 
         </div>
         <div class="">
-          <img class="h-auto w-full  mt-28" src="./img/food.PNG" alt="">
+          <img class="h-auto w-full  mt-28" src="./img/recipe.PNG" alt="">
           <div class="flex gap-2 text-gray-500 mt-10 md:text-lg lg:text-lg xl:text-lg text-sm">
             <div class="bg-gray-500 h-0.5 w-5 mt-3 "></div>
-            <h1 class="">Website,</h1>
+            <h1 class="">Web app,</h1>
             <h1>Tailwind,</h1>
             <h1>Figma,</h1>
           </div>
        
   
-          <h1 class="font-bold tracking-tighter mt-6 text-2xl">Food Recipe </h1>
+          <h1 class="font-bold tracking-tighter mt-6 text-2xl">Recipe Cuisine</h1>
           <p class="mt-6 text-sm text-gray-500">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, quam culpa ea pariatur quas quaerat sunt, et itaque nulla atque nemo accusamus, voluptatum exercitationem laboriosam facilis quasi. Quas, ab suscipit.</p>
          
           <div class="flex md:mt-2 lg:mt-2 xl:mt-2 mt-0">
