--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -184,6 +184,7 @@
             <h1 class="">Web app,</h1>
             <h1>Tailwind,</h1>
             <h1>Figma,</h1>
+            <h1>Edamam Api</h1>
           </div>
        
   
