--- a/src/resume.html
+++ b/src/resume.html
@@ -388,9 +388,11 @@ with seamless responsiveness across multiple devices.
       <h1 class="md:text-7xl lg:text-7xl xl:text-7xl text-6xl mt-20"><b>Check</b> portfolio!</h1>
       <div class="mt-8">
         
-        <div class="transition border-b-2 border-gray-300 w-24 cursor-pointer lg:mt-6 xl:mt-6 mt-10 hover:border-[#8d6e63]">
-          <h1 class="font-bold mb-1">Portfolio</h1>
-        </div>
+        <a href="https://rylllll.github.io/Portfolio/src/portfolio.html" class="tooltip ">
+          <div class="transition border-b-2 border-gray-300 w-24 cursor-pointer lg:mt-6 xl:mt-6 mt-10 hover:border-[#8d6e63]">
+            <h1 class="font-bold mb-1">Portoflio</h1>
+          </div>
+        </a>
       </div>
 
     
