--- a/src/index.html
+++ b/src/index.html
@@ -321,7 +321,7 @@
       <h1 class="md:text-7xl lg:text-7xl xl:text-7xl text-6xl mt-28"><b>Contact</b> me!</h1>
       <div class="mt-8">
         
-        <a href="https://rylllll.github.io/Portfolio/src/resume.html" class="tooltip ">
+        <a href="https://rylllll.github.io/Portfolio/src/contact.html" class="tooltip ">
         <div class="transition border-b-2 border-gray-300 w-24 cursor-pointer lg:mt-6 xl:mt-6 mt-10 hover:border-[#8d6e63]">
           <h1 class="font-bold mb-1">Contact</h1>
         </div>
