--- a/src/contact.html
+++ b/src/contact.html
@@ -173,7 +173,7 @@
               <div class="flex gap-10">
                   <div class="">
                       <h1 class="font-semibold flex gap-2">Full Name <p class="text-red-700">*</p></h1>
-                      <input
+                      <input required
                           type="text"
                           name="user_name"
                           class="mt-4 transition border-b-2 py-3 border-black  lg:w-64 xl:w-64 w-36 lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63]"
@@ -183,7 +183,7 @@
                   
                   <div class="">
                       <h1 class="font-semibold flex gap-2">Email Address <p class="text-red-700">*</p></h1>
-                      <input
+                      <input required
                           type="email"
                           name="user_email"
                           class="mt-4 transition border-b-2 py-3 border-black  lg:w-64 xl:w-64 w-36 lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63]"
@@ -195,7 +195,7 @@
               <div class="w-full mt-10">
                   <h1 class="font-semibold flex gap-2">Message <p class="text-red-700">*</p></h1>
                   <div class="flex flex-col">
-                      <textarea
+                      <textarea required
                       name="user_message"
                           rows="6"
                           class="mt-4 transition border-b-2 border-black md:w-full lg:w-full xl:w-full w-full lg:mt-6 xl:mt-6 focus:outline-none focus:border-[#8d6e63] resize-none"
